--- a/direction_asn1.ipynb
+++ b/direction_asn1.ipynb
@@ -191,6 +191,7 @@
     "    <li> A method to use the + sign to add two inventories together </li>\n",
     "    <li> A method to get the Top X highest rated products </li>\n",
     "    <li> A method to change the stock levels for any item in that inventory </li>\n",
+    "    <li> An overload of the length method, to return the number of items in the inventory </li>\n",
     "    </ul>\n",
     "</ul>\n",
     "\n",
